compelet the general section

--- a/style/Style.css
+++ b/style/Style.css
@@ -15,17 +15,18 @@ body {
   max-width: 600px; }
   #root-div .add-new-note-section {
     width: 90%;
-    height: 300px;
+    height: 302px;
     min-width: 270px;
     max-width: 360px;
     background-color: #F3F2F1;
-    border: 0.5px red solid;
+    border: 1px #008bd5 solid;
     position: absolute;
     z-index: -100;
     opacity: 1;
     margin-left: 5%;
     margin-top: 100px;
-    border-radius: 8px; }
+    border-radius: 8px;
+    box-shadow: 20px 20px 60px grey; }
     #root-div .add-new-note-section .add-new-head-section {
       width: 100%;
       height: 30px;
@@ -49,6 +50,7 @@ body {
       #root-div .add-new-note-section .add-new-head-section .option-button {
         width: 30px;
         height: 30px;
+        margin-left: 72%;
         border: none;
         background: none;
         outline: none;
@@ -80,16 +82,16 @@ body {
         font-size: 1.2rem;
         font-family: inherit;
         background: none;
+        border: none;
         width: 100%;
         height: 229px; }
         #root-div .add-new-note-section .input-fild .get-note::placeholder {
           font-size: 1rem;
           font-family: inherit; }
     #root-div .add-new-note-section .option-section {
-      width: 99%;
+      width: 100%;
       height: 39px;
-      margin-left: 1.5px;
-      border: 1px solid;
+      border-top: 1px  #777777 solid;
       border-radius: 0px 0px 8px 8px;
       display: flex;
       align-items: center;
@@ -168,8 +170,8 @@ body {
     position: absolute;
     background-color: inherit;
     max-width: 600px;
-    z-index: -100;
-    opacity: 0;
+    z-index: 100;
+    opacity: 1;
     border: 1px solid; }
     #root-div .settings-section .setting-head {
       width: 100%;
@@ -190,7 +192,7 @@ body {
           font-size: 1.2rem; }
       #root-div .settings-section .setting-head .section-name {
         color: black;
-        margin-left: -150px;
+        margin-left: 50%;
         font-family: inherit;
         font-size: 1rem;
         cursor: default; }
@@ -232,6 +234,45 @@ body {
       width: 100%;
       height: 180px;
       margin-top: 5px; }
+      #root-div .settings-section .general-section label {
+        margin-left: 10px;
+        margin-top: 10px; }
+      #root-div .settings-section .general-section input[type="checkbox"] {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        -webkit-tap-highlight-color: transparent;
+        display: block;
+        margin-left: 10px;
+        cursor: pointer; }
+        #root-div .settings-section .general-section input[type="checkbox"]:focus {
+          outline: 0; }
+      #root-div .settings-section .general-section .toggle {
+        height: 22px;
+        width: 50px;
+        border-radius: 16px;
+        display: inline-block;
+        position: relative;
+        margin: 0;
+        border: 3px solid #000000;
+        background-color: #000000;
+        transition: all .2s ease; }
+        #root-div .settings-section .general-section .toggle:after {
+          content: '';
+          position: absolute;
+          top: 3px;
+          left: 2px;
+          width: 12px;
+          height: 12px;
+          border-radius: 50%;
+          background: #FFFFFF;
+          box-shadow: 0 1px 2px rgba(44, 44, 44, 0.2);
+          transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35); }
+        #root-div .settings-section .general-section .toggle:checked {
+          border-color: #007CBF;
+          background-color: #008bd5; }
+          #root-div .settings-section .general-section .toggle:checked:after {
+            transform: translatex(27px); }
     #root-div .settings-section .color-theme-section {
       width: 100%;
       height: 200px;
