--- a/style/Style.scss
+++ b/style/Style.scss
@@ -230,6 +230,10 @@ body{
     z-index: 100;
     opacity: 1;
     border: 1px solid;
+     hr{
+        width: 50%;
+        margin-left: 20%;
+     }
 
      .setting-head{
          width: $settingSectionWidth;
@@ -450,7 +454,7 @@ body{
 
     .about-me-section{
         width: $settingSectionWidth;
-        height: 246px;
+        height: 240px;
       //  border: 1px solid;
 
         .about-section-name{
@@ -459,11 +463,11 @@ body{
 
         a{
             display: inline-block;
-            margin-left: 50px;
+            margin-left: 10px;
             margin-top: 50px;
             cursor: pointer;
 
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             text-decoration: none;
             text-decoration: none;
             
