--- a/style/Style.css
+++ b/style/Style.css
@@ -164,14 +164,16 @@ body {
           background-color: #EEEEEE; }
         #root-div .add-new-note-section .option-section .add-voice .bi-mic {
           font-size: 1.1rem; }
+  #root-div .opent-add-note-box {
+    animation: openAddNoteBox 1.5s 500ms alternate forwards; }
   #root-div .settings-section {
     width: inherit;
     height: inherit;
     position: absolute;
     background-color: inherit;
     max-width: 600px;
-    z-index: 100;
-    opacity: 1;
+    z-index: -100;
+    opacity: 0;
     border: 1px solid; }
     #root-div .settings-section hr {
       width: 50%;
@@ -340,6 +342,8 @@ body {
       margin-top: 4px;
       font-size: 1.2rem;
       cursor: default; }
+  #root-div .opent-setting-section {
+    animation: openSettingSection 400ms 300ms alternate forwards; }
   #root-div .head-section {
     width: 100%;
     height: 60px;
@@ -470,5 +474,28 @@ body {
           grid-row: 2/3;
           margin-left: 4px;
           font-size: 0.9rem; }
+
+@keyframes openAddNoteBox {
+  from {
+    z-index: -100;
+    opacity: 0; }
+  to {
+    z-index: 100;
+    opacity: 1; } }
+@keyframes openSettingSection {
+  0% {
+    z-index: -100;
+    opacity: 0; }
+  20% {
+    opacity: 0.2; }
+  30% {
+    opacity: 0.3; }
+  50% {
+    opacity: 0.5; }
+  70% {
+    opacity: 0.7; }
+  100% {
+    z-index: 100;
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
