--- a/style/Style.scss
+++ b/style/Style.scss
@@ -62,8 +62,63 @@ body{
    min-width: 300px;
    max-width: 600px;
   // border: 1px red solid;
+  .delete-box{
+    width: 50%;
+    height: 210px;
+    border: 1px #008bd5 solid;
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 2%;
+    max-width: 437px;
+    min-width: 381px;
+    border-radius: 4px;
+    z-index: -100;
+    opacity: 0;
+    background-color: inherit;
 
-  
+    .text-box{
+        font-size: 1.3rem;
+        margin-top: 35px;
+        margin-left: 20px;
+    }
+    label{
+        font-size: 1.1rem;
+        margin-left: 20px;
+    }
+    
+    input{
+        width: 20px;
+        height: 20px;
+        margin-left: 20px;
+        margin-top: 10px;
+        background-color: #008bd5;
+    }
+
+    .button-box{
+        width: 350px;
+        height: 80px;
+        border: 1px red solid;
+        margin-left: 20px;
+
+        button{
+            width: 130px;
+            height: 40px;
+            color: black;
+            margin-left: 30px;
+            margin-top: 15px;
+            @include buttonStyle();
+            background-color: #008bd5;
+            border-radius: 2px;
+        }
+
+        .keep-button{
+            background-color: #777777;
+        }
+    }
+  }
+  .open-delete-box{
+    animation: openDeleteBox  500ms 200ms alternate forwards;
+  }
 
    .add-new-note-section{
     width:90%;
@@ -663,7 +718,20 @@ body{
 
 
 
-
+@keyframes openDeleteBox {
+    0%{
+        z-index: -100;
+        opacity: 0;
+    }
+    50%{
+        z-index: -50;
+        opacity: 0.5;
+    }
+    100%{
+        z-index: 100;
+        opacity: 1;
+    }
+}
 
 @keyframes openAddNoteBox{
     from{
